--- a/Contact.css
+++ b/Contact.css
@@ -103,6 +103,7 @@ nav img{
 }
 .fab fa-x-twitter{
     color: #e08983;
+    text-decoration: none !important;
 }
 .fab fa-linkedin{
     color: #e08983;
@@ -143,6 +144,10 @@ nav img{
     margin-bottom: 15px;
     text-align: left;
 }
+nav .fa{
+    display: none;
+}
+
 @media(max-width:700px){
     .row{
         flex-direction: column;
@@ -238,3 +243,4 @@ nav img{
 .contact-form input[type="submit"]:hover {
     background-color: #e08983;
 }
+
